fix dark mode bug

--- a/src/index.css
+++ b/src/index.css
@@ -277,7 +277,7 @@ input:focus {
 .tabs a {
   text-decoration: none;
   padding-bottom: 10px;
-  color: var(--black);
+  /* color: var(--black); */
   padding-left: 15px;
   padding-right: 15px;
 }
